# ogle

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cargo-run-console.sh  default.nix  flake.nix  t
.github/actions-rs/: grcov.yml
.github/workflows/: cargo-deb.yml  ci.yml  main.yml  rust.yml
demos/: demo-1-df.sh  demo-2-free.sh  demo-3-ping.sh  demo-4-fping.sh  demo-5-sleep.sh  demo-sleep.sh  exitrand.sh  lib.sh  run-all.sh  test.sh
src/: childstream.rs  cli.rs  core.rs  differ.rs  engine.rs  input.rs  input_stream.rs  lib.rs  localtime.rs  misc.rs  orchestrator.rs  orchtests.rs  output.rs  output_sequence.rs  output_simple.rs  output_sink.rs  output_trait.rs  pipe.rs  process_wrapper.rs  progbar.rs  runner.rs  stream.rs  sys.rs  sys_api.rs  sys_input.rs  sys_real.rs  sys_virtual.rs  term_wrapper.rs  termapi.rs  ticker.rs  time_wrapper.rs  timewrap.rs  user_wrapper.rs  view.rs  view_sequence.rs
tests/: childstream_test.rs  integration_test.rs
