[package]
name = "ogle"
description = "Execute a command periodically, showing the output only when it changes"
version = "2.1.1"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/ogle"
repository = "https://github.com/lpenz/ogle"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["watch", "command-line"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
tokio = "1.45.1"
tokio-stream = "0.1.17"
console = "0.15.11"
tokio-process-stream = "0.4.0"
env_logger = "0.11.8"
tracing = { version = "0.1.41", features = ["log"] }
mockall = "0.13.1"

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["clock"]

[build-dependencies]
color-eyre = "0.6.5"
man = "0.3.0"

[dev-dependencies]
color-eyre = "0.6.5"

[package.metadata.deb]
section = "utils"
extended-description = """\
ogle is a program that runs the given command-line periodically,
showing the output only when it is different than the last.
It allows you to do all kinds of monitoring right from the command
line.

It's a more flexible and modern take on *[watch (1)]*
"""
assets = [
    ["target/release/ogle.1", "usr/share/man/man1/", "644"],
    ["target/release/ogle", "usr/bin/", "755"],
    ["LICENSE", "usr/share/doc/ogle/", "644"],
    ["AUTHORS", "usr/share/doc/ogle/", "644"],
    ["README.md", "usr/share/doc/ogle/", "644"],
    ["CHANGELOG.md", "usr/share/doc/ogle/", "644"],
]
