[package]
name = "ogle"
description = "Execute a command periodically, showing the output only when it changes"
version = "2.3.1"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/ogle"
repository = "https://github.com/lpenz/ogle"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["watch", "command-line"]

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
color-eyre = "0.6.5"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "io-std", "tracing"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
tokio-process-stream = "0.4.1"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "tracing-log", "fmt"] }
enum_dispatch = "0.3.13"
pin-project = "1.1.10"
crossterm = { version = "0.29.0", features = ["event-stream"] }
console-subscriber = { version = "0.5.0", optional = true }
nix = { version = "0.31.1", features = ["signal"] }

[dependencies.chrono]
version = "0.4.43"
default-features = false
features = ["clock"]

[build-dependencies]
color-eyre = "0.6.5"
man = "0.3.0"

[dev-dependencies]
color-eyre = "0.6.5"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[package.metadata.deb]
section = "utils"
extended-description = """\
ogle is a program that runs the given command-line periodically,
showing the output only when it is different than the last.
It allows you to do all kinds of monitoring right from the command
line.

It's a more flexible and modern take on *[watch (1)]*
"""
assets = [
    ["target/release/ogle.1", "usr/share/man/man1/", "644"],
    ["target/release/ogle", "usr/bin/", "755"],
    ["LICENSE", "usr/share/doc/ogle/", "644"],
    ["AUTHORS", "usr/share/doc/ogle/", "644"],
    ["README.md", "usr/share/doc/ogle/", "644"],
    ["CHANGELOG.md", "usr/share/doc/ogle/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ogle.1", dest = "/usr/share/man/man1/", mode = "644" },
    { source = "target/release/ogle", dest = "/usr/bin/", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/ogle/", mode = "644" },
    { source = "AUTHORS", dest = "/usr/share/doc/ogle/", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/ogle/", mode = "644" },
]
